--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,14 +9,13 @@
   }
 </style>
   <form id="loginform" action="#" method="post">
-    <div class="LoginPage d-flex justify-content-evenly" data-ride="carousel"
-      style="background-position:center  ;background-size:cover;   background-image: url('/Images/New/image (14).jpg'  );">
-      <div class=" container-fluid" style="background-color: rgba(62, 62, 62, 0.668);">
-          <div class="container-fluid col-12 d-flex flex-wrap " style="overflow: auto;" >
-              <div class="container-fluid col-lg-8 col-sm-1">
-                <small id="idanimatedMessageLogin" class=" flex-nowrap text-warning w-100 h-100" style=" font-size: 90px; height: 100px; flex-wrap: nowrap;" >Make this festival yours</small>
-              </div>
-              <div class="container-fluid col-lg-3 col-sm-12 border border-light    rounded   m-4   p-3 " style="  background-color: rgba(86,81,59,.5);">
+    <div class="container-fluid d-flex"   style="background-position:center  ;background-size:cover;   background-image: url('/Images/New/image (14).jpg'  );height: 100vh ; ">
+      <div class="container-fluid d-flex flex-wrap" style="margin-top: 10%;  ; height: 50% ; background-color: rgba(62, 62, 62, 0.668);">
+           
+        <div class="container-fluid col-lg-8 col-sm-12">
+          <small id="idanimatedMessageLogin" class="flex-nowrap text-warning custom-text">Make this festival yours</small>
+        </div>
+              <div class="container-fluid col-lg-3 col-sm-12 border border-light rounded m-1   p-1 " style="  background-color: rgba(86,81,59,.5);">
                 <div class="container-fluid mt-2   ">
                   <div class="container-fluid d-flex align-items-center col-12 " style="height: 50px;  ;">
                     
@@ -48,7 +47,7 @@
                     
                 </div>
               </div>
-          </div>
+           
       </div>
     </div>
   </form>
